--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "youtubei.js": "^16.0.1"
+    "yt-dlp-exec": "^1.0.2"
   }
 }
